# LR5-6

./: .env  pyproject.toml
app/: __init__.py  models.py  views.py
templates/: config.py
